--- a/.github/workflows/postgress11.yml
+++ b/.github/workflows/postgress11.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: configure
-      run: apt-get install -y postgresql-server-dev-all && apt-get install -y gcc && apt-get install -y icu-devtools libicu-dev
+      run: sudo apt-get install -y postgresql-server-dev-all gcc icu-devtools libicu-dev
     - name: make
       run: make
     - name: make install
