--- a/.github/workflows/postgress11.yml
+++ b/.github/workflows/postgress11.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: configure
       run: sudo apt-get install -y postgresql-server-dev-all gcc icu-devtools libicu-dev
+    - name: debug
+      run: ls -l /usr/include/postgresql
     - name: make
       run: make
     - name: make install
