--- a/.github/workflows/postgress12.yml
+++ b/.github/workflows/postgress12.yml
@@ -15,10 +15,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: uninstall postgresql-14
       run: sudo apt-get remove -y postgresql-14 libpq-dev
-    - name: configure
+    - name: install dependencies
       run: sudo apt-get install -y --allow-downgrades postgresql-12 postgresql-server-dev-12 libpq-dev libpq5=12.13-0ubuntu0.20.04.1 gcc icu-devtools libicu-dev
-    - name: debug
-      run: ls -l /usr/include/postgresql && pg_config --pgxs && ls -l /usr/lib/postgresql
     - name: make
       run: make
     - name: make install
