--- a/Dockerfile_pg12
+++ b/Dockerfile_pg12
@@ -1,7 +1,7 @@
-FROM postgres:11
+FROM postgres:12
 RUN apt-get update
-RUN apt-get install -y postgresql-server-dev-all
-RUN apt-get install -y gcc
+RUN apt-get install -y postgresql-server-dev-12
+RUN apt-get install -y gcc make
 RUN apt-get install -y icu-devtools libicu-dev
 
 RUN mkdir -p /root/parser
