--- a/.github/workflows/postgress12_16.yml
+++ b/.github/workflows/postgress12_16.yml
@@ -25,7 +25,7 @@ jobs:
           tags: postgres:12-dev
       -
         name: Run bash script to verify image postgres:12-dev
-        run: pwd && ls -l && chmod +x ./postgres-12.sh && ./postgres-12.sh
+        run: pwd && ls -l .. && chmod +x ../postgres-12.sh && ../postgres-12.sh
 
   build_pg16:
     runs-on: ubuntu-latest
@@ -45,5 +45,5 @@ jobs:
           tags: postgres:16-dev
       -
         name: Run bash script to verify image postgres:16-dev
-        run: pwd && ls -l && chmod +x ./postgres-16.sh && ./postgres-16.sh
+        run: pwd && ls -l .. && chmod +x ../postgres-16.sh && ../postgres-16.sh
 
