--- a/.github/workflows/postgress12_16.yml
+++ b/.github/workflows/postgress12_16.yml
@@ -65,6 +65,93 @@ jobs:
         name: Run bash script to verify image postgres:12-dev
         run: docker pull localhost:5000/postgres:12-dev && docker tag localhost:5000/postgres:12-dev postgres:12-dev && chmod +x ./postgres-12.sh && ./postgres-12.sh
 
+  PostgreSQL-13:
+    runs-on: ubuntu-latest
+    services:
+      registry:
+        image: registry:2
+        ports:
+          - 5000:5000
+    steps:
+      - uses: actions/checkout@v4
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: network=host
+      -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          build-args: POSTGRES_VERSION=13
+          file: Dockerfile_alpine
+          tags: localhost:5000/postgres:dev
+      -
+        name: Run bash script to verify image postgres:dev
+        run: docker pull localhost:5000/postgres:dev && docker tag localhost:5000/postgres:dev postgres:dev && chmod +x ./postgres-1x.sh && ./postgres-1x.sh
+        
+  PostgreSQL-14:
+    runs-on: ubuntu-latest
+    services:
+      registry:
+        image: registry:2
+        ports:
+          - 5000:5000
+    steps:
+      - uses: actions/checkout@v4
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: network=host
+      -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          build-args: POSTGRES_VERSION=14
+          file: Dockerfile_alpine
+          tags: localhost:5000/postgres:dev
+      -
+        name: Run bash script to verify image postgres:dev
+        run: docker pull localhost:5000/postgres:dev && docker tag localhost:5000/postgres:dev postgres:dev && chmod +x ./postgres-1x.sh && ./postgres-1x.sh
+
+  PostgreSQL-15:
+    runs-on: ubuntu-latest
+    services:
+      registry:
+        image: registry:2
+        ports:
+          - 5000:5000
+    steps:
+      - uses: actions/checkout@v4
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: network=host
+      -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          build-args: POSTGRES_VERSION=15
+          file: Dockerfile_alpine
+          tags: localhost:5000/postgres:dev
+      -
+        name: Run bash script to verify image postgres:dev
+        run: docker pull localhost:5000/postgres:dev && docker tag localhost:5000/postgres:dev postgres:dev && chmod +x ./postgres-1x.sh && ./postgres-1x.sh
+
   PostgreSQL-16:
     runs-on: ubuntu-latest
     services:
