--- a/Dockerfile_alpine
+++ b/Dockerfile_alpine
@@ -1,6 +1,6 @@
 
 ARG POSTGRES_VERSION=16
-FROM postgres:$POSTGRES_VERSION-alpine3.18 as build
+FROM postgres:$POSTGRES_VERSION-alpine as build
 ARG POSTGRES_VERSION=16
 RUN apk update && apk add musl-dev icu-dev llvm15-dev clang15 make
 
@@ -13,8 +13,8 @@ COPY pg_cjk_parser--0.0.1.sql /root/parser/
 COPY zht2zhs.h /root/parser/
 RUN make clean && make install
 
-FROM postgres:$POSTGRES_VERSION-alpine3.18
+FROM postgres:$POSTGRES_VERSION-alpine
 COPY --from=build /root/parser/pg_cjk_parser.bc /usr/local/lib/postgresql/bitcode
-COPY --from=build /root/parser/pg_cjk_parser.so /usr/local/lib/postgresql
-COPY --from=build /root/parser/pg_cjk_parser--0.0.1.sql /usr/local/share/postgresql/extension
-COPY --from=build /root/parser/pg_cjk_parser.control /usr/local/share/postgresql/extension
+COPY --from=build /root/parser/pg_cjk_parser.so /usr/local/lib/postgresql/
+COPY --from=build /root/parser/pg_cjk_parser--0.0.1.sql /usr/local/share/postgresql/extension/
+COPY --from=build /root/parser/pg_cjk_parser.control /usr/local/share/postgresql/extension/
